--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "twbs/bootstrap-icons": "^1.11"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
@@ -54,7 +55,9 @@
             "dev-master": "10.x-dev"
         },
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "barryvdh/laravel-ide-helper"
+            ]
         }
     },
     "config": {
